--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,20 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+.idea/
+
+*.odt
+*.doc
+*.docx
+*.ods
+*.xls
+*.xlsx
+*.odp
+*.ppt
+*.pptx
+*.pdf
+**/LICENSE
+*.zip
+*.tar
+*.gz
